--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 <body>
     <header>
         <div class="top-container">
-            <img class="top-cloud" src="image/cloud.png" width="15%" alt="cloud-pic">
+            <img class="top-cloud" src="" width="15%" alt="cloud-pic">
             <h1 id="name">I'm Agaba</h1>
             <p class="subtitle">a <span class="underline-text"></span>Mid-level Software Engineer</p>
-            <img src="image/mountain.png" alt="mountain-pic">
-            <img class="bottom-cloud" src="image/cloud.png" width="15%" alt="cloud-pic">
+            <img src="" alt="mountain-pic">
+            <img class="bottom-cloud" src="" width="15%" alt="cloud-pic">
         </div>
     </header>
 
@@ -27,10 +27,10 @@
         <!-- Other sections remain the same -->
 
         <section class="contact-message">
-            <h2>Get In Touch <img class="laugh-image" src="image/laugh.png" width="60" height="60" alt="laugh-pic"></h2>
+            <h2>Get In Touch <img class="laugh-image" src="" width="60" height="60" alt="laugh-pic"></h2>
             <h3>My biggest love is to do Business with You</h3>
             <p>Technology is an easy way of delivering good strategies for business improvement.</p>
-            <a class="btn" href="mailto:agabaderrick18@gmail.com">CONTACT ME</a>
+            <a class="btn" href="">CONTACT ME</a>
         </section>
     </main>
 
@@ -53,6 +53,31 @@
 
         // Call the changeName function every 3 seconds
         setInterval(changeName, 3000);
+
+        // Load images and links dynamically
+        const images = document.querySelectorAll('img');
+        const links = document.querySelectorAll('a');
+
+        // Define image and link sources
+        const imageSources = [
+            'image/cloud.png',
+            'image/mountain.png',
+            'image/cloud.png'
+        ];
+        const linkHrefs = [
+            'mailto:agabaderrick18@gmail.com',
+            '', // Add your second link here
+            ''  // Add your third link here
+        ];
+
+        // Update image and link sources
+        for (let i = 0; i < images.length; i++) {
+            images[i].src = imageSources[i];
+        }
+
+        for (let i = 0; i < links.length; i++) {
+            links[i].href = linkHrefs[i];
+        }
     </script>
 </body>
 </html>
