Add-projects-and-description-to my-website

--- a/index.html
+++ b/index.html
@@ -1,25 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Agaba Derrick Junior</title>
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="icon" href="image/logo.ico">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:wght@300&family=Merriweather:wght@300&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
+    <!-- ... (head section remains the same) ... -->
 </head>
 <body>
     <header>
         <div class="top-container">
-            <img class="top-cloud" src="" width="15%" alt="cloud-pic">
-            <h1 id="name">I'm Agaba</h1>
-            <p class="subtitle">a <span class="underline-text"></span>Mid-level Software Engineer</p>
-            <img src="" alt="mountain-pic">
-            <img class="bottom-cloud" src="" width="15%" alt="cloud-pic">
+            <!-- ... (header content remains the same) ... -->
         </div>
     </header>
 
@@ -32,6 +19,30 @@
             <p>Technology is an easy way of delivering good strategies for business improvement.</p>
             <a class="btn" href="">CONTACT ME</a>
         </section>
+
+        <!-- Section for showcasing links to your projects -->
+        <section class="portfolio">
+            <h2>My Portfolio</h2>
+            <div class="work">
+                <!-- Project 1 -->
+                <div class="work-item">
+                    <h4>Project 1</h4>
+                    <p class="project-description">Description of project 1.</p>
+                    <p class="mentor">Mentor: <a href="mentor-link-1">Mentor Name 1</a></p>
+                    <a href="link-to-project-1" target="_blank">View Project 1</a>
+                </div>
+
+                <!-- Project 2 -->
+                <div class="work-item">
+                    <h4>Project 2</h4>
+                    <p class="project-description">Description of project 2.</p>
+                    <p class="mentor">Mentor: <a href="mentor-link-2">Mentor Name 2</a></p>
+                    <a href="link-to-project-2" target="_blank">View Project 2</a>
+                </div>
+
+                <!-- Add more project sections as needed -->
+            </div>
+        </section>
     </main>
 
     <footer class="bottom-container">
@@ -40,44 +51,7 @@
 
     <script>
         // JavaScript to add interactivity
-
-        // Change the name dynamically
-        const nameElement = document.getElementById('name');
-        const names = ['Agaba', 'Derrick', 'Junior'];
-        let index = 0;
-
-        function changeName() {
-            nameElement.textContent = `I'm ${names[index]}`;
-            index = (index + 1) % names.length;
-        }
-
-        // Call the changeName function every 3 seconds
-        setInterval(changeName, 3000);
-
-        // Load images and links dynamically
-        const images = document.querySelectorAll('img');
-        const links = document.querySelectorAll('a');
-
-        // Define image and link sources
-        const imageSources = [
-            'image/cloud.png',
-            'image/mountain.png',
-            'image/cloud.png'
-        ];
-        const linkHrefs = [
-            'mailto:agabaderrick18@gmail.com',
-            '', // Add your second link here
-            ''  // Add your third link here
-        ];
-
-        // Update image and link sources
-        for (let i = 0; i < images.length; i++) {
-            images[i].src = imageSources[i];
-        }
-
-        for (let i = 0; i < links.length; i++) {
-            links[i].href = linkHrefs[i];
-        }
+        // ... (existing JavaScript code remains the same) ...
     </script>
 </body>
 </html>
