--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <!-- Other sections remain the same -->
 
         <section class="contact-message">
-            <h2>Get In Touch <img class="laugh-image" src="" width="60" height="60" alt="laugh-pic"></h2>
+            <h2>Get In Touch <img class="laugh-image" src="/home/derrick/Desktop/Portfnolio/image/laugh.png" width="60" height="60" alt="laugh-pic"></h2>
             <h3>My biggest love is to do Business with You</h3>
             <p>Technology is an easy way of delivering good strategies for business improvement.</p>
             <a class="btn" href="">CONTACT ME</a>
@@ -39,10 +39,10 @@
             <div class="work">
                 <!-- Project 1 -->
                 <div class="work-item">
-                    <h4>Project 1</h4>
-                    <p class="project-description">Description of project 1.</p>
-                    <p class="mentor">Mentor: <a href="mentor-link-1">Mentor Name 1</a></p>
-                    <a href="link-to-project-1" target="_blank">View Project 1</a>
+                    <h4>OPENMRS</h4>
+                    <p class="project-description">OpenMRS is a collaborative open-source project to develop software to support the delivery of health care in developing countries. OpenMRS is founded on the principles of openness and sharing of ideas, software and strategies for deployment and use.</p>
+                    <p class="mentor">Mentor: <a href="mentor-link-1">Daniel Kayiwa</a></p>
+                    <a href="https://github.com/Agabaderrickjunior/openmrs-esm-patient-chart.git" target="_blank">OpenMRS-ESM-PATIENT-CHART</a>
                 </div>
 
                 <!-- Project 2 -->
