--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
     <footer class="bottom-container">
         <!-- Other footer content remains the same -->
         <div class="footer-links">
-            <a href="your-cv-link">CV</a>
-            <a href="your-portfolio-link">Portfolio</a>
-            <a href="your-linkedin-link">LinkedIn</a>
-            <a href="your-github-link">GitHub</a>
+            <a href="https://docs.google.com/document/d/1NW9PSz8bLKnRmmtMRpgqpz1X7ZdC5u0O/edit?usp=share_link&ouid=113875114519135929194&rtpof=true&sd=true">CV</a>
+            <a href="https://agabaderrickjunior.github.io/Portfnolio/">Portfolio</a>
+            <a href="https://www.linkedin.com/in/agaba-derrick-junior-41b303221/">LinkedIn</a>
+            <a href="https://github.com/Agabaderrickjunior">GitHub</a>
         </div>
     </footer>
 
@@ -122,7 +122,7 @@
 
         // Update footer link hrefs
         for (let i = 0; i < footerLinks.length; i++) {
-            footerLinks[i].href = footerLinkHrefs[i];
+            footerLinks[i].href = footerLinkHrefs[i];git c
         }
     </script>
 </body>
