--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <!-- Other sections remain the same -->
 
         <section class="contact-message">
-            <h2>Get In Touch <img class="laugh-image" src="/home/derrick/Desktop/Portfnolio/image/laugh.png" width="60" height="60" alt="laugh-pic"></h2>
+            <h2>Get In Touch <img class="laugh-image" src="image/laugh.png" width="60" height="60" alt="laugh-pic"></h2>
             <h3>My biggest love is to do Business with You</h3>
             <p>Technology is an easy way of delivering good strategies for business improvement.</p>
             <a class="btn" href="">CONTACT ME</a>
@@ -61,70 +61,13 @@
     <footer class="bottom-container">
         <!-- Other footer content remains the same -->
         <div class="footer-links">
-            <a href="https://docs.google.com/document/d/1NW9PSz8bLKnRmmtMRpgqpz1X7ZdC5u0O/edit?usp=share_link&ouid=113875114519135929194&rtpof=true&sd=true">CV</a>
-            <a href="https://agabaderrickjunior.github.io/Portfnolio/">Portfolio</a>
-            <a href="https://www.linkedin.com/in/agaba-derrick-junior-41b303221/">LinkedIn</a>
-            <a href="https://github.com/Agabaderrickjunior">GitHub</a>
+            <a href="your-cv-link">CV</a>
+            <a href="your-portfolio-link">Portfolio</a>
+            <a href="your-linkedin-link">LinkedIn</a>
+            <a href="your-github-link">GitHub</a>
         </div>
     </footer>
 
-    <script>
-        // JavaScript to add interactivity
-
-        // Change the name dynamically
-        const nameElement = document.getElementById('name');
-        const names = ['Agaba', 'Derrick', 'Junior'];
-        let index = 0;
-
-        function changeName() {
-            nameElement.textContent = `I'm ${names[index]}`;
-            index = (index + 1) % names.length;
-        }
-
-        // Call the changeName function every 3 seconds
-        setInterval(changeName, 3000);
-
-        // Load images and links dynamically
-        const images = document.querySelectorAll('img');
-        const links = document.querySelectorAll('a');
-
-        // Define image and link sources
-        const imageSources = [
-            'image/cloud.png',
-            'image/mountain.png',
-            'image/cloud.png'
-        ];
-        const linkHrefs = [
-            'mailto:agabaderrick18@gmail.com',
-            '', // Add your second link here
-            ''  // Add your third link here
-        ];
-
-        // Update image and link sources
-        for (let i = 0; i < images.length; i++) {
-            images[i].src = imageSources[i];
-        }
-
-        for (let i = 0; i < links.length; i++) {
-            links[i].href = linkHrefs[i];
-        }
-
-        // Update footer links
-        const footerLinks = document.querySelectorAll('.footer-links a');
-
-        // Define footer link hrefs
-        const footerLinkHrefs = [
-            'your-cv-link',
-            'your-portfolio-link',
-            'your-linkedin-link',
-            'your-github-link'
-        ];
-
-        // Update footer link hrefs
-        for (let i = 0; i < footerLinks.length; i++) {
-            footerLinks[i].href = footerLinkHrefs[i];git c
-        }
-    </script>
+    <script src="js/script.js"></script>
 </body>
 </html>
-
