--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 <body>
     <header>
         <div class="top-container">
-            <img class="top-cloud" src="" width="15%" alt="cloud-pic">
+            <img class="top-cloud" src="image/cloud.png" width="15%" alt="cloud-pic">
             <h1 id="name">I'm Agaba</h1>
             <p class="subtitle">a <span class="underline-text"></span>Mid-level Software Engineer</p>
             <img src="" alt="mountain-pic">
-            <img class="bottom-cloud" src="" width="15%" alt="cloud-pic">
+            <img class="bottom-cloud" src="image/cloud.png" width="15%" alt="cloud-pic">
         </div>
     </header>
 
@@ -41,15 +41,15 @@
                 <div class="work-item">
                     <h4>OPENMRS</h4>
                     <p class="project-description">OpenMRS is a collaborative open-source project to develop software to support the delivery of health care in developing countries. OpenMRS is founded on the principles of openness and sharing of ideas, software and strategies for deployment and use.</p>
-                    <p class="mentor">Mentor: <a href="mentor-link-1">Daniel Kayiwa</a></p>
+                    <p class="mentor">Mentor: <a href="mentor-link-1">OpenMRS</a></p>
                     <a href="https://github.com/Agabaderrickjunior/openmrs-esm-patient-chart.git" target="_blank">OpenMRS-ESM-PATIENT-CHART</a>
                 </div>
 
                 <!-- Project 2 -->
                 <div class="work-item">
-                    <h4>Project 2</h4>
-                    <p class="project-description">Description of project 2.</p>
-                    <p class="mentor">Mentor: <a href="mentor-link-2">Mentor Name 2</a></p>
+                    <h4>Google for Developers</h4>
+                    <p class="project-description">Google Developers is Google's site for software development tools and platforms, application programming interfaces, and technical resources. The site contains documentation on using Google developer tools and APIs—including discussion groups and blogs for developers using Google's developer products.</p>
+                    <p class="mentor">Mentor: <a href="mentor-link-2">Google Developer Student Clubs</a></p>
                     <a href="link-to-project-2" target="_blank">View Project 2</a>
                 </div>
 
@@ -61,7 +61,7 @@
     <footer class="bottom-container">
         <!-- Other footer content remains the same -->
         <div class="footer-links">
-            <a href="your-cv-link">CV</a>
+            <a href="https://docs.google.com/document/d/1NW9PSz8bLKnRmmtMRpgqpz1X7ZdC5u0O/edit?usp=drive_link&ouid=113875114519135929194&rtpof=true&sd=true">CV</a>
             <a href="your-portfolio-link">Portfolio</a>
             <a href="your-linkedin-link">LinkedIn</a>
             <a href="your-github-link">GitHub</a>
